# inspect_rl

./: .env.example  .gitignore  .mcp.json  README.md  justfile  pyproject.toml
.github/workflows/: main.yml
docs/: 01_features.md  02_artifacts.md  03_internals.md  04_known-issues.md  05_roadmap.md
docs/example_run/: manifest.json  report.html  report.md
docs/example_run/eval_logs/000_val/: 2026-05-15T14-59-54-00-00_task_7ygiTYGjw4u8gRzCaynAkT.eval
docs/example_run/eval_logs/001_rollout/: 2026-05-15T14-59-56-00-00_task_YDdw7Dzz4htFnpqmSpLJTN.eval
docs/example_run/eval_logs/002_rollout/: 2026-05-15T14-59-57-00-00_task_Xd4UAz4zyHLsHRvNKdSLWV.eval
docs/example_run/eval_logs/002_val/: 2026-05-15T14-59-58-00-00_task_8MWLvstBReBBLJEkM6rNdX.eval
docs/example_run/eval_logs/003_rollout/: 2026-05-15T14-59-59-00-00_task_kC46bC6XFiF5At4F9NsEFY.eval
docs/example_run/eval_logs/004_rollout/: 2026-05-15T15-00-00-00-00_task_F8thLGtPimcFfcDJbNTojn.eval
docs/example_run/eval_logs/004_val/: 2026-05-15T15-00-01-00-00_task_3urKfZnhuA6gv5es6vTzfU.eval
docs/example_run/eval_logs/005_rollout/: 2026-05-15T15-00-02-00-00_task_b7QMC9VVx6KBVG5bhTeR3G.eval
docs/example_run/eval_logs/005_val/: 2026-05-15T15-00-04-00-00_task_Pw2K96B8Vi4wNZf4xnSnnf.eval
examples/configs/: README.md
examples/configs/1node/: slurm_trainer.sbatch  slurm_vllm.sbatch
examples/configs/2node/: accelerate.yaml  slurm.sbatch
examples/configs/4node/: accelerate.yaml  accelerate_zero2.yaml  slurm.sbatch
examples/configs/8node/: accelerate_zero3.yaml  slurm.sbatch
examples/configs/hpc1/1node/: slurm_trainer.sbatch  slurm_vllm.sbatch
examples/configs/hpc1/2node/: slurm.sbatch
examples/configs/hpc1/4node/: accelerate_zero2.yaml  slurm.sbatch
examples/configs/hpc1/8node/: accelerate_zero3.yaml  deepspeed.json  slurm.sbatch
examples/configs/hpc2/h200/: README.md  slurm_2gpu.sbatch  slurm_8gpu.sbatch
examples/example_pkg/: README.md  pyproject.toml
examples/example_pkg/src/example_pkg/: __init__.py  run_tldr.py
journal/001_rearchitecture/: debug.ipynb  plan.md  reflection.md  smoketest_findings.md  testing.md
journal/002_cleanup/: 01_brief.md  02_changes.md
journal/003_operational_improvements/: 001.md
journal/004_tool_calling_fixes/: 001.md
journal/005_rl_magic_number/: 001_debug.ipynb.ipynb  002_findings.md  003_math_agent.ipynb  004_iterate.ipynb
journal/006_poc_3b/: 001_iter.ipynb  002_code_fixes.md
journal/007_faster_rl/: 001_sota_techniques.md  002_implementation.md  003_t2_design.md
journal/008_multinode/: 001_starting_point.md  002_rank_gating.md  003_summary_and_test_plan.md  004_cluster_smoke.md  005_trainer_nccl_hang.md  006_failing_trainer_trace.txt  006_fi_log_excerpt.txt  006_fi_log_vllm_excerpt.txt  006_vllm_worker_internal_error.md  007_4_to_72b_smoke.md
journal/009_h200_smoke/: 001_debugging_practices.md  002_8gpu_ddp_smoke.md
src/inspect_rl/: __init__.py  cli.py
src/inspect_rl/_deprecated/: bfcl.py  grpo.py  gsm8k.py  tldr.py
src/inspect_rl/core/: README.md  rollout.py  trainer.py  trl_vllm_provider.py
src/inspect_rl/example/: gsm8k.py  magic_number.py  math_agent.py  tldr.py
src/inspect_rl/perf/: README.md  prefetch.py
src/inspect_rl/util/: README.md  _cuda.py  display.py  heartbeat.py  logging_config.py  run_dir.py  summary.py
tests/: test_imports.py
