[project]
name = "inspect-rl"
version = "0.1.0"
description = "Reinforcement finetuning using Inspect tasks as the reward signal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- core ---
    "typer>=0.20.0",
    "rich>=13.9.4",
    "httpx>=0.27",

    # --- deep learning ---
    "openai>=1.90.0",
    "torch>=2.9",
    # triton pinned due to awkwardness installing from pytorch index
    "triton",
    # https://github.com/huggingface/trl/pull/4300
    "transformers>=5.0.0",
    "trl>=1.2.0",
    "accelerate",
    "peft",
    "deepspeed>=0.18.5",
    # "UserWarning: TRL currently supports vLLM versions from 0.11.0 to 0.18.0."
    "vllm>=0.18,<0.18.1",
    "datasets",
    "huggingface-hub>=0.34.4",
    "timm",
    "wandb>=0.21.1",

    # --- eval ---
    "inspect-ai>=0.3.200",
    "inspect-evals",
    "inspect-k8s-sandbox @ git+https://github.com/UKGovernmentBEIS/inspect_k8s_sandbox",
    "evaluate",
]

[project.optional-dependencies]
# Internal extras — these may require SSH access to private repos. External
# users: plain `uv sync` works without them.
aisi = [
    # Commented out: telemetry tries to reach AWS from compute nodes and floods
    # logs with botocore retry tracebacks (~hundreds per training step) on the
    # offline Slurm HPC nodes we develop against. Re-enable once the AWS path
    # is reachable or once the provider package gains an offline mode.
    # "<redacted: telemetry/auth provider package> @ <redacted-vcs-url>",
]

[project.scripts]
irl = "inspect_rl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# CUDA-12.8 torch wheels. PyPI has CPU-only torch; the pytorch index ships
# GPU wheels for both x86_64 and aarch64, so this works on commodity Linux
# boxes as well as aarch64 Slurm HPC clusters.
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
torch = { index = "pytorch" }
triton = { index = "pytorch" }
inspect-evals = { git = "https://github.com/UKGovernmentBEIS/inspect_evals" }
inspect-ai = { git = "https://github.com/UKGovernmentBEIS/inspect_ai" }

[tool.uv.workspace]
members = [
    "examples/example_pkg",
]

[tool.uv]
# Both aarch64 (Slurm HPC) and x86_64 linux boxes are supported. If uv
# refuses to lock because no wheel exists for one of these, loosen here
# rather than re-introducing the aarch64-only pin.
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
override-dependencies = [
    # "vllm==0.10.2",
    # "torch==2.7",
    # "triton==3.3.0",
    "transformers>=5.5",
    "datasets<=4.5.0",
]

# Kept commented for aarch64 fallback: if pypi's vllm wheels don't work on
# aarch64, pin `vllm==0.18.0` in dependencies and uncomment this to fetch
# from the aarch64 wheel host.
# extra-index-url = [
#     "https://wheels.vllm.ai/0.18.0/",
# ]

# Can help reduce awkwardness fetching aarch64 wheels from one of several indexes
# index-strategy = "unsafe-best-match"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    # --- notebooks ---
    "autonomous-notebooks",
    "jupyter>=1.1.1",
    "ipykernel>=6.30.1",
    # --- lint / test ---
    "pytest>=8.0",
    "ruff>=0.12.9",
    "pyright>=1.1.403",
    # --- misc ---
    "nvitop>=1.5.3",
    "ninja>=1.13.0",
    "py-spy>=0.4.2",
]
